--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     </div>
 
     <div class="card">
-      <p>Coming from the Mountains, I love spending time in nature, learning languages and exploring the <strong>world</strong>🌍.</p>
+      <p>Coming from the Mountains, I love spending time in <strong>nature</strong>, learning languages and exploring the <strong>world</strong>🌍.</p>
       <a href="#" class="btn-dark">Discover something</a>
     </div>
 
     <div class="card">
-      <h2>Follow me</h2>
+      <h2>Social Networks</h2>
       <ul class="list-inline">
-        <li><a href="#" class="icon-social"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#" class="icon-social"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#" class="icon-social"><i class="fab fa-tumblr"></i></a></li>
+        <li><a href="https://www.instagram.com/stellatmn/" target="_blank" class="icon-social"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://hyprcompactstellarsystem.tumblr.com/" target="_blank" class="icon-social"><i class="fab fa-tumblr"></i></a></li>
       </ul>
       </div>
     </div>
   </body>
 
 </html>
+
